examples/test/testpolicy18124.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18124
  namespace: namespace281
spec:
  podSelector:
    matchLabels:
      key49: value23
      key24: value25
      key47: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value46
          key3: value5
          key22: value21
